--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 .Ruserdata
 TestingLinguisticUniversals.Rproj
 .DS_Store
-/results/sensitivity_no_tree_fam_control
+./results/sensitivity_no_tree_fam_control
