--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ TestingLinguisticUniversals.Rproj
 .DS_Store
 ./results/sensitivity_no_tree_fam_control
 /results/sensitivity_no_tree_fam_control
+/old
