--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ TestingLinguisticUniversals.Rproj
 ./results/sensitivity_no_tree_fam_control
 /results/sensitivity_no_tree_fam_control
 /old
+/2023_08_24_no_tree_fam_control_bfcluster
